--- a/index.html
+++ b/index.html
@@ -434,37 +434,35 @@
       <section class="clients section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="clients">
-            <li class="clients-list">
+          <ul class="clients-list">
+            <li class="clients-item">
                <a class="clients-link"
                 href=""><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client1"></use>
                 </svg></a>
                </li>
-            <li class="clients-list">
+            <li class="clients-item">
               <a class="clients-link" href="">
                 <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list">
+            <li class="clients-item">
                <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-client3"></use></a>             
-              </svg>            
+                <use href="./images/icons.svg#icon-client3"></use></svg></a>                       
             </li>
-            <li class="clients-list">             
+            <li class="clients-item">             
                 <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client4"></use>
                 </svg></a>              
             </li>
-            <li class="clients-list">
-              <div>
+            <li class="clients-item">
                 <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client5"></use>
                 </svg></a>
             </li>
-            <li class="clients-list">
+            <li class="clients-item">
                 <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client6"></use>
                 </svg></a>
@@ -475,12 +473,12 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="footer container">
+      <div class="container main-block">
         <div class="footer-block">
-        <a href="./index.html" class="footer-logo"
+         <a href="./index.html" class="footer-logo"
           >Web<span class="footer-studio">Studio</span></a
-        >
-        <address class="adress-style">
+         >
+         <address class="adress-style">
           <ul class="footer-contacts">
             <li>
               <a
@@ -502,10 +500,10 @@
               >
             </li>
           </ul>
-        </address>
-      </div>
+          </address>
+         </div>
         <div class="join">
-        <h3 class="join-title">Приєднуйтесь</h3>
+         <h3 class="join-title">Приєднуйтесь</h3>
           <div class="footer-socials">
             <ul class="socials list">
               <li class="footer socials-item">
@@ -534,8 +532,8 @@
                   </svg>
                 </a>
               </li>
-            </li>
-            <li class="socials-item">
+            
+             <li class="socials-item">
               <a
                 class="socials-link link"
                 href="https://facebook.com"
@@ -547,8 +545,8 @@
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
-            </li>
-            <li class="socials-item">
+             </li>
+             <li class="socials-item">
               <a
                 class="socials-link link"
                 href="https://linkedin.com"
@@ -560,10 +558,10 @@
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
-            </li>
+            </ul>
           </div>
+        </div>
       </div>
-      
     </footer>
   </body>
 </html>
