--- a/portfolio.html
+++ b/portfolio.html
@@ -212,14 +212,14 @@
         </div>
       </section>
     </main>
-    <!--Footer-->
-    <footer class="footer">
-      <div class="footer container">
+     <!--Footer-->
+     <footer class="footer">
+      <div class="container main-block">
         <div class="footer-block">
-        <a href="./index.html" class="footer-logo"
+         <a href="./index.html" class="footer-logo"
           >Web<span class="footer-studio">Studio</span></a
-        >
-        <address class="adress-style">
+         >
+         <address class="adress-style">
           <ul class="footer-contacts">
             <li>
               <a
@@ -241,10 +241,10 @@
               >
             </li>
           </ul>
-        </address>
-      </div>
+          </address>
+         </div>
         <div class="join">
-        <h3 class="join-title">Приєднуйтесь</h3>
+         <h3 class="join-title">Приєднуйтесь</h3>
           <div class="footer-socials">
             <ul class="socials list">
               <li class="footer socials-item">
@@ -273,8 +273,8 @@
                   </svg>
                 </a>
               </li>
-            </li>
-            <li class="socials-item">
+            
+             <li class="socials-item">
               <a
                 class="socials-link link"
                 href="https://facebook.com"
@@ -286,8 +286,8 @@
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
-            </li>
-            <li class="socials-item">
+             </li>
+             <li class="socials-item">
               <a
                 class="socials-link link"
                 href="https://linkedin.com"
@@ -299,10 +299,10 @@
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
-            </li>
+            </ul>
           </div>
+        </div>
       </div>
-      
     </footer>
   </body>
 </html>
