--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <svg class="icon-antenna" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
-              </div>              
+              </div>
               <h3 class="features-subtitle">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -111,7 +111,7 @@
                 <svg class="icon-astronaut" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
-                </div>
+              </div>
               <h3 class="features-subtitle">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -366,63 +366,63 @@
                 <ul class="socials list">
                   <li class="socials-item">
                     <div class="icon-wrapper">
-                    <a
-                      class="socials-link link"
-                      href="https://instagram.com"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      aria-label="Instagram icon"
-                    >
-                      <svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </div>
+                      <a
+                        class="socials-link link"
+                        href="https://instagram.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Instagram icon"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                   <li class="socials-item">
                     <div class="icon-wrapper">
-                    <a
-                      class="socials-link link"
-                      href="https://twitter.com"
-                      aria-label="Twitter icon"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                    >
-                      <svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </div>
+                      <a
+                        class="socials-link link"
+                        href="https://twitter.com"
+                        aria-label="Twitter icon"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                   <li class="socials-item">
                     <div class="icon-wrapper">
-                    <a
-                      class="socials-link link"
-                      href="https://facebook.com"
-                      aria-label="Facebook icon"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                    >
-                      <svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </div>
+                      <a
+                        class="socials-link link"
+                        href="https://facebook.com"
+                        aria-label="Facebook icon"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                   <li class="socials-item">
                     <div class="icon-wrapper">
-                    <a
-                      class="socials-link link"
-                      href="https://linkedin.com"
-                      aria-label="LinkedIn icon"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                    >
-                      <svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </div>
+                      <a
+                        class="socials-link link"
+                        href="https://linkedin.com"
+                        aria-label="LinkedIn icon"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -436,11 +436,11 @@
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="clients-list">
             <li class="clients-item">
-               <a class="clients-link"
-                href=""><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/icons.svg#icon-client1"></use>
-                </svg></a>
-               </li>
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client1"></use></svg
+              ></a>
+            </li>
             <li class="clients-item">
               <a class="clients-link" href="">
                 <svg class="clients-icon" width="106" height="60">
@@ -449,23 +449,28 @@
               </a>
             </li>
             <li class="clients-item">
-               <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-client3"></use></svg></a>                       
-            </li>
-            <li class="clients-item">             
-                <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/icons.svg#icon-client4"></use>
-                </svg></a>              
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client3"></use></svg
+              ></a>
             </li>
             <li class="clients-item">
-                <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/icons.svg#icon-client5"></use>
-                </svg></a>
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client4"></use></svg
+              ></a>
             </li>
             <li class="clients-item">
-                <a class="clients-link" href=""><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/icons.svg#icon-client6"></use>
-                </svg></a>
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client5"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -475,35 +480,35 @@
     <footer class="footer">
       <div class="container main-block">
         <div class="footer-block">
-         <a href="./index.html" class="footer-logo"
-          >Web<span class="footer-studio">Studio</span></a
-         >
-         <address class="adress-style">
-          <ul class="footer-contacts">
-            <li>
-              <a
-                href="https://goo.gl/maps/3AbPHXzuyrKdPbz98"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="adress-link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="adress-mail"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="adress-phone"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <address class="adress-style">
+            <ul class="footer-contacts">
+              <li>
+                <a
+                  href="https://goo.gl/maps/3AbPHXzuyrKdPbz98"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="adress-link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="adress-mail"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="adress-phone"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
           </address>
-         </div>
+        </div>
         <div class="join">
-         <h3 class="join-title">Приєднуйтесь</h3>
+          <h3 class="join-title">Приєднуйтесь</h3>
           <div class="footer-socials">
             <ul class="socials list">
               <li class="footer socials-item">
@@ -532,32 +537,32 @@
                   </svg>
                 </a>
               </li>
-            
-             <li class="socials-item">
-              <a
-                class="socials-link link"
-                href="https://facebook.com"
-                aria-label="Facebook icon"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg class="socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-             </li>
-             <li class="socials-item">
-              <a
-                class="socials-link link"
-                href="https://linkedin.com"
-                aria-label="LinkedIn icon"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg class="socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://facebook.com"
+                  aria-label="Facebook icon"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="socials-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://linkedin.com"
+                  aria-label="LinkedIn icon"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="socials-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
